--- a/views/createcomment.erb
+++ b/views/createcomment.erb
@@ -1,8 +1,7 @@
 <form action="/createcomment" method="POST">
-  Name: <input type="text" name="customers[name]"><br/>
-  Email: <input type="text" name="customers[email]"><br/>
-  Comment: <input type="text" name="customers[comment]"><br/>
+  Name: <input type="text" name="comment[user]"><br/>
+  Comment: <input type="text" name="comment[comment]"><br/>
   <input type="submit">
 </form>
 
-<p><a href="/">Home</a></p>
+<p><a href="blog.erb">Home</a></p>
