--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,15 +7,15 @@
     <!--MobileFirst-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="stylesheet" href="../addon/animate.css" />
-    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"/>
-    <link rel="stylesheet" href="../css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../public/css/animate.css" />
+    <link type="text/css" rel="stylesheet" href="../public/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../public/css/style.css" type="text/css" />
     
-    <script src="../js/bootstrap.js"></script>
-    <script src="../addon/jquery-2.2.0.js"></script>
-    <script src="../addon/jquery.lettering.js"></script>
-    <script src="../addon/jquery.textillate.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../public/js/bootstrap.js"></script>
+    <script src="../public/js/jquery-2.2.0.js"></script>
+    <script src="../public/js/jquery.lettering.js"></script>
+    <script src="../public/js/jquery.textillate.js"></script>
+    <script src="../public/js/main.js"></script>
 
 </head>
 <body>
