--- a/views/home.erb
+++ b/views/home.erb
@@ -3,10 +3,10 @@
         <div class="container-fluid">
             <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
             <ul class="nav navbar-nav">
-                <li class="active home"><a href="home.erb">Home</a></li>
+                <li class="active home"><a href="/">Home</a></li>
                 <li class="about"><a href="./views/about.erb">About Me</a></li>
                 <li class="projects"><a href="./views/project.erb">Projects</a></li>
-                <li class="blog"><a href="./views/blog.erb">Blog</a></li>
+                <li class="blog"><a href="/blog">Blog</a></li>
                 <li class="resume"><a href="./views/resume.erb">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
