--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,15 +7,22 @@
     <!--MobileFirst-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="stylesheet" href="../public/css/animate.css" />
-    <link type="text/css" rel="stylesheet" href="../public/css/bootstrap.css"/>
-    <link rel="stylesheet" href="../public/css/style.css" type="text/css" />
-    
-    <script src="../public/js/bootstrap.js"></script>
-    <script src="../public/js/jquery-2.2.0.js"></script>
-    <script src="../public/js/jquery.lettering.js"></script>
-    <script src="../public/js/jquery.textillate.js"></script>
-    <script src="../public/js/main.js"></script>
+    <link rel="stylesheet" href="/css/animate.css" />
+    <!--<link type="text/css" rel="stylesheet" href="/css/bootstrap.css"/>-->
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!--<script src="/js/bootstrap.js"></script>-->
+    <!--<script src="/js/jquery-2.2.0.js"></script>-->
+    <script src="/js/jquery.lettering.js"></script>
+    <script src="/js/jquery.textillate.js"></script>
+    <!--<script src="/js/main.js"></script>-->
 
 </head>
 <body>
