--- a/views/about.erb
+++ b/views/about.erb
@@ -1,16 +1,16 @@
 <div class="content-wrapper">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
+            <div class="navbar-header"> <a class="navbar-brand" href="/kenjacau">Kenjacau.me</a> </div>
             <ul class="nav navbar-nav">
-                <li class="home"><a href="home.erb">Home</a></li>
-                <li class="about active"><a href="./views/about.erb">About Me</a></li>
-                <li class="projects"><a href="./views/project.erb">Projects</a></li>
-                <li class="blog"><a href="./views/blog.erb">Blog</a></li>
-                <li class="resume"><a href="./views/resume.html">Resume</a></li>
+                <li class="home"><a href="/">Home</a></li>
+                <li class="about active"><a href="/about">About Me</a></li>
+                <li class="projects"><a href="/project">Projects</a></li>
+                <li class="blog"><a href="/blog">Blog</a></li>
+                <li class="resume"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
+                <li><a href="/contact"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
             </ul>
         </div>
     </nav>
@@ -21,10 +21,10 @@
                     <div class="socialmedia">
                         <ul>
                             <li>
-                                <a href="https://www.linkedin.com/in/kenjacau"><img src="linkedin.png"></a>
+                                <a href="https://www.linkedin.com/in/kenjacau"><img src="/images/linkedin.png"></a>
                             </li>
                             <li>
-                                <a href="https://github.com/Kenjacau"><img src="thegithubicon.png"></a>
+                                <a href="https://github.com/Kenjacau"><img src="/images/thegithubicon.png"></a>
                             </li>
                         </ul>
                     </div>
