--- a/views/home.erb
+++ b/views/home.erb
@@ -1,49 +1,55 @@
 <div class="content-wrapper">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
+            <div class="navbar-header"> <a class="navbar-brand" href="/kenjacau">Kenjacau.me</a> </div>
             <ul class="nav navbar-nav">
                 <li class="active home"><a href="/">Home</a></li>
-                <li class="about"><a href="./views/about.erb">About Me</a></li>
-                <li class="projects"><a href="./views/project.erb">Projects</a></li>
+                <li class="about"><a href="/about">About Me</a></li>
+                <li class="projects"><a href="/project">Projects</a></li>
                 <li class="blog"><a href="/blog">Blog</a></li>
-                <li class="resume"><a href="./views/resume.erb">Resume</a></li>
+                <li class="resume"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
+                <li><a href="/contact"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
             </ul>
         </div>
     </nav>
-    <div class="row">
+ 
         <div class="container">
             <div class="row social-block">
                 <div class="col-sm-12">
                     <div class="socialmedia">
                         <ul>
                             <li>
-                                <a href="https://www.linkedin.com/in/kenjacau"><img src="./images/linkedin.png"></a>
+                                <a href="https://www.linkedin.com/in/kenjacau"><img src="/images/linkedin.png"></a>
                             </li>
                             <li>
-                                <a href="https://github.com/Kenjacau"><img src="./images/thegithubicon.png"></a>
+                                <a href="https://github.com/Kenjacau"><img src="/images/thegithubicon.png"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
+          
+            
+              <div class="row">
             
             <div class="col-sm-12">
-        <div id="homecon">
-            <h1 class="tlt" data-in-effect="fadeInLeftBig" data-out-shuffle="true">Kenny Cauthen</h1>
-            <p class="tlt2">Software | Mobile | Creative</p>
-            <a href="./html/about.html" class="button">Learn More</a>
-        </div>
+            
+        <div class="text-center" id="homecon">
+            <h1 class="tlt text-center" data-in-effect="fadeInLeftBig" data-out-shuffle="true">Kenny Cauthen</h1>
+            <p class="tlt2 text-center">Software | Mobile | Creative</p>
+            <a href="/about" class="button text-center">Learn More</a>
+     
     </div>
                     
                 
                 </div>
             </div>
         </div>
-    </div>
-</div>
- 
+         </div>
+         <div class="push"></div>
+ </div>
+
+
    
