--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,20 +6,26 @@
     <meta charset="utf-8"> 
     <!--MobileFirst-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    
-    <link rel="stylesheet" href="/css/animate.css" />
-    <link type="text/css" rel="stylesheet" href="/css/bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
-
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/jquery-2.2.0.js"></script>
-    <script src="/js/jquery.lettering.js"></script>
-    <script src="/js/jquery.textillate.js"></script>
-    <script src="/js/main.js"></script>
+     <link rel="stylesheet" href="/css/animate.css"  type="text/css"/>
+     
+     
+     <script src="/js/jquery-2.2.1.min.js"></script>
+     <script src="/js/jquery-1.12.2.min.js"></script>
+     
+     <script src="/js/jquery.lettering.js"></script>
+     <script src="/js/jquery.textillate.js"></script>
+     <script src="/js/main.js"></script>
+    
+   
+     <script src="/js/bootstrap.min.js"></script>
+    
+    
+       
+   
+ 
+    
 
 </head>
 <body>
