--- a/views/readmore.erb
+++ b/views/readmore.erb
@@ -1,13 +1,13 @@
 <div class="content-wrapper">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header"> <a class="navbar-brand" href="http://kenjacau.me/">Kenjacau</a> </div>
+            <div class="navbar-header"> <a class="navbar-brand" href="/kenjacau">Kenjacau.me</a> </div>
             <ul class="nav navbar-nav">
-                <li class="home"><a href="home.erb">Home</a></li>
-                <li class="about"><a href="./views/about.erb">About Me</a></li>
-                <li class="projects"><a href="./views/project.erb">Projects</a></li>
-                <li class="blog active"><a href="./views/blog.erb">Blog</a></li>
-                <li class="resume"><a href="./views/resume.erb">Resume</a></li>
+                <li class="home"><a href="/">Home</a></li>
+                <li class="about"><a href="/about">About Me</a></li>
+                <li class="projects"><a href="/project">Projects</a></li>
+                <li class="blog active"><a href="/blog">Blog</a></li>
+                <li class="resume"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
