--- a/views/fail.erb
+++ b/views/fail.erb
@@ -3,18 +3,18 @@
         <div class="container-fluid">
             <div class="navbar-header"> <a class="navbar-brand" href="/kenjacau">Kenjacau.me</a> </div>
             <ul class="nav navbar-nav">
-                <li class="active home"><a href="/">Home</a></li>
+                <li class="home"><a href="/">Home</a></li>
                 <li class="about"><a href="/about">About Me</a></li>
                 <li class="projects"><a href="/project">Projects</a></li>
-                <li class="blog"><a href="/blog">Blog</a></li>
+                <li class="blog active"><a href="/blog">Blog</a></li>
                 <li class="resume"><a href="/resume">Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/contact"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
+                <li><a href="./create.erb"><span class="glyphicon glyphicon-user"></span>Contact Me</a></li>
             </ul>
         </div>
     </nav>
- 
+    <div class="row">
         <div class="container">
             <div class="row social-block">
                 <div class="col-sm-12">
@@ -30,26 +30,19 @@
                     </div>
                 </div>
             </div>
-          
             
-              <div class="row text-center">
-            
+             
             <div class="col-sm-12">
-            
-        <div class="text-center" id="homecon">
-            <h1 class="tlt text-center" data-in-effect="fadeInLeftBig" data-out-shuffle="true">Kenny Cauthen</h1>
-            <p class="tlt2 text-center">Software | Mobile | Creative</p>
-            <a href="/about" class="button">Learn More</a>
-     
-    </div>
-                    
+                <div class="jumbotron text-center">
+                <h2>Something happened...try again?</h2>
                 
-                </div>
+                     <a href="/blog"><button class="btn-info" type="submit">Go Back</button></a>
+                    
+                    </div>
+
+                      </div>
+</div>
+
+               
             </div>
         </div>
-         </div>
-         <div class="push"></div>
- </div>
-
-
-   
