added styling and anonymous post to comments

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -85,7 +85,7 @@
                                         
                                         
                                         <div class="row">
-                                                <p style="font-size:.9em"><%=comment.user%> said: <%=comment.comment%></p>
+                                                <p style="font-size:.9em"><b><%=comment.user%></b> said: <i><%=comment.comment%></i></p>
                                             </div>
                                              
                                         
